# communication_trace_tool

./: .gitignore
communication_aggregate/: package.xml  setup.cfg  setup.py
communication_aggregate/communication_aggregate/: aggregate.py
communication_summarizer/: CMakeLists.txt  package.xml
communication_summarizer/src/: plot.py  summarizer.cpp  summarizer.py
communication_trace/: CMakeLists.txt  package.xml
communication_trace/include/communication_trace/: comm_trace.hpp  comm_tracer.hpp
communication_trace/src/: comm_trace.cpp  comm_tracer.cpp
communication_trace_msgs/: CMakeLists.txt  package.xml
communication_trace_msgs/msg/: CommunicationTrace.msg
